--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,9 @@ transformers = "^4.47.1"
 xxhash = "^3.5.0"
 numpydantic = "^1.6.6"
 tensorboard = "^2.18.0"
+pandas = "^2.2.3"
+scipy = "^1.15.1"
+recommenders = "^1.2.1"
 
 [build-system]
 requires = ["poetry-core"]
